--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -15,13 +15,13 @@
     $parent: &;
 
     position: fixed;
-    top: 25%;
-    left: 25%;
     min-width: 112px;
     max-width: 280px;
     padding: 8px 0;
     border-radius: sys("shape", "corner", "extra-small");
     user-select: none;
+    overflow-y: auto;
+    z-index: 1;
 
     @include themes.themify {
         @include elevation(2);
@@ -53,9 +53,7 @@
 
     &__item {
         display: grid;
-
-        // TODO: change back to $icon__font-size?
-        grid-template-columns: max-content 1fr max-content;
+        grid-template-columns: $icon__size 1fr $icon__size;
         align-items: center;
         height: 48px;
         gap: 12px;
@@ -71,6 +69,7 @@
         @include font-styling("label-large");
 
         grid-column: 2;
+        white-space: nowrap;
     }
 
     &__icon {
